# Active-Trace

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  docker-compose.yml  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  fix_permissions.py  pyproject.toml  seed_dev_data.py  seed_full_dev_data.py  test_calificaciones.xlsx  test_padron.xlsx  test_padron_invalido.xlsx
backend/alembic/: README  env.py
backend/app/: main.py
backend/tests/: conftest.py  test_analisis_tdd.py  test_app_startup.py  test_audit_appendonly_tdd.py  test_audit_helper_tdd.py  test_audit_model_tdd.py  test_auditoria_acciones_scope_tdd.py  test_auditoria_comunicaciones_interacciones_tdd.py  test_auditoria_log_tdd.py  test_auth_api_tdd.py  test_auth_dependencies_tdd.py  test_auth_migration_tdd.py  test_auth_repository_tdd.py  test_avisos_ack_gestion_tdd.py  test_avisos_crear_listado_tdd.py  test_calificaciones_import_tdd.py  test_calificaciones_migration_tdd.py  test_coloquios_tdd.py  test_comunicaciones_migration_tdd.py  test_comunicaciones_tdd.py  test_comunicaciones_worker_main_tdd.py  test_config.py  test_core_models_tdd.py  test_database.py  test_encuentros_tdd.py  test_equipos_tdd.py  test_estructura_endpoints_tdd.py  test_estructura_models_tdd.py  test_estructura_repositories_tdd.py  test_estructura_schemas_tdd.py  test_estructura_service_tdd.py  test_facturas_crud_tdd.py  test_fechas_crud_tdd.py  test_fragmento_lms_tdd.py  test_health.py  test_impersonation_tdd.py  test_liquidacion_calculo_tdd.py  test_liquidacion_cierre_tdd.py  test_lms_parser_tdd.py  test_logging.py  (+26 more)
(+430 files in other folders)
