[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activia-trace-backend"
version = "0.1.0"
description = "Foundation backend scaffold for activia-trace"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16,<2.0",
  "argon2-cffi>=25.1,<26.0",
  "asyncpg>=0.30,<1.0",
  "cryptography>=46.0,<47.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "opentelemetry-api>=1.36,<2.0",
  "opentelemetry-sdk>=1.36,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.57b0,<1.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.10,<3.0",
  "python-jose>=3.5,<4.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy>=2.0.41,<3.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-asyncio>=1.1,<2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
